crates/graph/tests/snapshots/test_serde__node_null_edges_null_serialize.snap
---
source: crates/graph/tests/test_serde.rs
expression: "&graph"
---
{
  "nodes": [
    null,
    null,
    null,
    null,
    null
  ],
  "node_holes": [],
  "edge_property": "directed",
  "edges": [
    [
      0,
      1,
      null
    ],
    [
      2,
      0,
      null
    ],
    [
      1,
      3,
      null
    ],
    [
      1,
      2,
      null
    ],
    [
      2,
      3,
      null
    ],
    [
      4,
      3,
      null
    ]
  ]
}
