crates/graph/tests/snapshots/test_serde__node_str_edges_i32_serialize.snap
---
source: crates/graph/tests/test_serde.rs
expression: "&graph"
---
{
  "nodes": [
    "A",
    "B",
    "C",
    "F",
    "E"
  ],
  "node_holes": [],
  "edge_property": "directed",
  "edges": [
    [
      0,
      1,
      7
    ],
    [
      2,
      0,
      9
    ],
    [
      1,
      3,
      15
    ],
    [
      1,
      2,
      10
    ],
    [
      2,
      3,
      11
    ],
    [
      4,
      3,
      6
    ]
  ]
}
